Fix elide-integration-tests build warnings